--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.0.3",
     "@types/node": "^14.14.6",
+    "chai": "^4.2.0",
+    "ethereum-waffle": "^3.2.0",
+    "ethers": "^5.0.19",
     "hardhat": "^2.0.2",
     "pre-commit": "^1.2.2",
     "prettier": "^2.1.2",
