--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
   "include": ["./scripts", "./test"],
   "files": [
     "hardhat.config.ts",
-    "./node_modules/@nomiclabs/hardhat-ethers/src/type-extensions.d.ts",
-    "./node_modules/@nomiclabs/hardhat-waffle/src/type-extensions.d.ts"
+    "./node_modules/@nomiclabs/hardhat-ethers/src/type-extensions.ts",
+    "./node_modules/@nomiclabs/hardhat-waffle/src/type-extensions.ts"
   ]
 }
