--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
     "@openzeppelin/contracts": "^3.2.2-solc-0.7",
+    "@openzeppelin/hardhat-upgrades": "^1.3.1",
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.0.3",
     "@types/node": "^14.14.6",
     "chai": "^4.2.0",
     "ethereum-waffle": "^3.2.0",
-    "ethers": "^5.0.19",
+    "ethers": "^5.0.20",
     "hardhat": "^2.0.2",
     "pre-commit": "^1.2.2",
     "prettier": "^2.1.2",
