--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "strict": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
+    "downlevelIteration": true,
     "outDir": "dist"
   },
   "include": ["./scripts", "./test"],
