--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ethereum-waffle": "^3.2.0",
     "ethers": "^5.0.20",
     "hardhat": "^2.0.4",
+    "hardhat-gas-reporter": "^1.0.2",
     "pre-commit": "^1.2.2",
     "prettier": "^2.1.2",
     "prettier-plugin-solidity": "^1.0.0-alpha.59",
