--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "solc": "0.7.5",
     "solhint": "^3.3.1",
     "solhint-plugin-prettier": "^0.0.5",
+    "solidity-coverage": "^0.7.12",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   }
