--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.1",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
-    "@openzeppelin/contracts": "^3.2.2-solc-0.7",
+    "@openzeppelin/contracts": "3.3.0-solc-0.7",
     "@openzeppelin/hardhat-upgrades": "^1.4.2",
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.0.3",
