--- a/package.json
+++ b/package.json
@@ -16,24 +16,23 @@
   ],
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.1",
-    "@nomiclabs/hardhat-waffle": "^2.0.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "3.3.0-solc-0.7",
-    "@openzeppelin/hardhat-upgrades": "^1.4.2",
+    "@openzeppelin/hardhat-upgrades": "^1.5.0",
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.0.3",
     "@types/node": "^14.14.6",
     "chai": "^4.2.0",
-    "ethereum-waffle": "^3.2.0",
-    "ethers": "^5.0.20",
-    "hardhat": "^2.0.4",
-    "hardhat-gas-reporter": "^1.0.3",
+    "ethereum-waffle": "^3.2.1",
+    "ethers": "^5.0.25",
+    "hardhat": "^2.0.8",
+    "hardhat-gas-reporter": "^1.0.4",
     "pre-commit": "^1.2.2",
     "prettier": "^2.1.2",
-    "prettier-plugin-solidity": "^1.0.0-alpha.59",
-    "solc": "0.7.5",
+    "prettier-plugin-solidity": "^1.0.0-beta.3",
     "solhint": "^3.3.1",
     "solhint-plugin-prettier": "^0.0.5",
-    "solidity-coverage": "^0.7.12",
+    "solidity-coverage": "^0.7.13",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   }
