--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   ],
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.1",
+    "@nomiclabs/hardhat-etherscan": "^2.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "3.3.0-solc-0.7",
     "@openzeppelin/hardhat-upgrades": "^1.5.0",
