--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@types/node": "^14.14.6",
     "chai": "^4.2.0",
     "ethereum-waffle": "^3.2.1",
-    "ethers": "^5.0.25",
+    "ethers": "5.0.25",
     "hardhat": "^2.0.8",
     "hardhat-gas-reporter": "^1.0.4",
     "pre-commit": "^1.2.2",
