--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nomiclabs/hardhat-etherscan": "^2.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "3.3.0-solc-0.7",
+    "@openzeppelin/contracts-upgradeable": "3.3.0-solc-0.7",
     "@openzeppelin/hardhat-upgrades": "^1.5.0",
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.0.3",
