--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.0.3",
     "@types/node": "^14.14.6",
+    "@uniswap/lib": "^4.0.1-alpha",
     "chai": "^4.2.0",
     "ethereum-waffle": "^3.2.1",
     "ethers": "5.0.25",
