--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint"
   ],
   "devDependencies": {
+    "@graphprotocol/graph-cli": "^0.19.0",
     "@nomiclabs/hardhat-ethers": "^2.0.1",
     "@nomiclabs/hardhat-etherscan": "^2.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
