add coverage to CI Fixes #67

--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -19,3 +19,18 @@ jobs:
       - run: yarn install
       - run: yarn compile
       - run: yarn test
+  test-coverage:
+    name: Test Contracts Coverage
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2-beta
+        with:
+          node-version: '12'
+      - run: yarn install
+      - run: yarn compile
+      - run: yarn coverage
+      - uses: coverallsapp/github-action@v1.1.2
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
