--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "prettier-plugin-solidity": "^1.0.0-beta.3",
     "solhint": "^3.3.1",
     "solhint-plugin-prettier": "^0.0.5",
-    "solidity-coverage": "^0.7.13",
+    "solidity-coverage": "0.7.13",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   }
