--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   "devDependencies": {
     "@graphprotocol/graph-cli": "^0.19.0",
     "@nomiclabs/hardhat-ethers": "^2.0.1",
-    "@nomiclabs/hardhat-etherscan": "^2.1.0",
+    "@nomiclabs/hardhat-etherscan": "^2.1.1",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@openzeppelin/contracts": "3.3.0-solc-0.7",
-    "@openzeppelin/contracts-upgradeable": "3.3.0-solc-0.7",
+    "@openzeppelin/contracts": "^3.4.0-solc-0.7",
+    "@openzeppelin/contracts-upgradeable": "^3.4.0-solc-0.7-2",
     "@openzeppelin/hardhat-upgrades": "^1.5.0",
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.0.3",
@@ -32,8 +32,8 @@
     "@uniswap/lib": "^4.0.1-alpha",
     "chai": "^4.2.0",
     "ethereum-waffle": "^3.2.1",
-    "ethers": "5.0.25",
-    "hardhat": "^2.0.8",
+    "ethers": "5.0.31",
+    "hardhat": "^2.0.10",
     "hardhat-gas-reporter": "^1.0.4",
     "pre-commit": "^1.2.2",
     "prettier": "^2.1.2",
