fix create-vault task and add VaultContract abi to VaultFactory data source

--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -37,6 +37,8 @@ dataSources:
       abis:
         - name: InstanceRegistry
           file: ./abis/IInstanceRegistry.json
+        - name: VaultContract
+          file: ./abis/IUniversalVault.json
       eventHandlers:
         - event: InstanceAdded(address)
           handler: handleNewVault
