--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,7 +51,7 @@
     }
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+    "src/**/*.{js,jsx,ts,tsx,json,md}": [
       "prettier --write"
     ]
   },
