--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@apollo/client": "^3.3.16",
     "@craco/craco": "^6.1.2",
+    "@headlessui/react": "^1.2.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -21,6 +22,7 @@
     "react-scripts": "4.0.3",
     "string_decoder": "^1.3.0",
     "styled-components": "^5.3.0",
+    "twin.macro": "^2.4.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "web3": "^1.3.5"
@@ -55,6 +57,12 @@
     "src/**/*.{js,jsx,ts,tsx,json,md}": [
       "prettier --write"
     ]
+  },
+  "babelMacros": {
+    "twin": {
+      "config": "./tailwind.config.js",
+      "preset": "styled-components"
+    }
   },
   "devDependencies": {
     "@types/coingecko-api": "^1.0.0",
