--- a/package.json
+++ b/package.json
@@ -43,5 +43,9 @@
     "solidity-coverage": "0.7.13",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
+  },
+  "dependencies": {
+    "numeral-es6": "^1.0.0",
+    "react-spring": "^9.2.3"
   }
 }
