--- a/subgraph/subgraph.template.yaml
+++ b/subgraph/subgraph.template.yaml
@@ -43,6 +43,48 @@ dataSources:
         - event: InstanceAdded(address)
           handler: handleNewVault
   - kind: ethereum/contract
+    name: CrucibleFactory
+    network: mainnet
+    source:
+      address: '0x54e0395CFB4f39beF66DBCd5bD93Cca4E9273D56'
+      abi: InstanceRegistry
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/vault.ts
+      entities:
+        - Vault
+      abis:
+        - name: InstanceRegistry
+          file: ./abis/IInstanceRegistry.json
+        - name: VaultContract
+          file: ./abis/IUniversalVault.json
+      eventHandlers:
+        - event: InstanceAdded(address)
+          handler: handleNewVault
+  - kind: ethereum/contract
+    name: CrucibleNFT
+    network: mainnet
+    source:
+      address: '0x54e0395CFB4f39beF66DBCd5bD93Cca4E9273D56'
+      abi: ERC721
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/vault.ts
+      entities:
+        - Vault
+      abis:
+        - name: ERC721
+          file: ./abis/IERC721Enumerable.json
+        - name: VaultContract
+          file: ./abis/IUniversalVault.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,indexed uint256)
+          handler: handleTransfer
+  - kind: ethereum/contract
     name: UniversalVaultNFT
     network: mainnet
     source:
@@ -58,6 +100,8 @@ dataSources:
       abis:
         - name: ERC721
           file: ./abis/IERC721Enumerable.json
+        - name: VaultContract
+          file: ./abis/IUniversalVault.json
       eventHandlers:
         - event: Transfer(indexed address,indexed address,indexed uint256)
           handler: handleTransfer
