--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,11 @@
     "bnc-onboard": "^1.25.0",
     "coingecko-api": "^1.0.10",
     "graphql": "^15.5.0",
+    "numeral-es6": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.2.3",
     "string_decoder": "^1.3.0",
     "styled-components": "^5.3.0",
     "twin.macro": "^2.4.2",
