--- a/subgraph/package.json
+++ b/subgraph/package.json
@@ -1,16 +1,16 @@
 {
   "name": "ampleforth-geyser-v2",
-  "license": "UNLICENSED",
+  "license": "GPL-3.0",
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ aalavandhan/amplgeyserv2beta",
+    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ aalavandhan/AmplGeyserV2",
     "create-local": "graph create --node http://localhost:8020/ thegostep/ampleforth-geyser-v2",
     "remove-local": "graph remove --node http://localhost:8020/ thegostep/ampleforth-geyser-v2",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 thegostep/ampleforth-geyser-v2"
   },
   "dependencies": {
-    "@graphprotocol/graph-cli": "^0.20.1",
+    "@graphprotocol/graph-cli": "^0.21.1",
     "@graphprotocol/graph-ts": "^0.20.1"
   }
 }
