--- a/subgraph/package.json
+++ b/subgraph/package.json
@@ -2,9 +2,9 @@
   "name": "ampleforth-geyser-v2",
   "license": "GPL-3.0",
   "scripts": {
+    "auth": "graph auth  --studio",
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ aalavandhan/amplgeyserv2beta",
     "create-local": "graph create --node http://localhost:8020/ thegostep/ampleforth-geyser-v2",
     "remove-local": "graph remove --node http://localhost:8020/ thegostep/ampleforth-geyser-v2",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 thegostep/ampleforth-geyser-v2"
