--- a/subgraph/subgraph.template.yaml
+++ b/subgraph/subgraph.template.yaml
@@ -4,10 +4,11 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: GeyserRegistry
-    network: mainnet
+    network: {{ network }}
     source:
-      address: '0x0000000000000000000000000000000000000000'
+      address: "{{ geyserRegistry }}"
       abi: InstanceRegistry
+      startBlock: {{ startBlock }}
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -23,10 +24,11 @@ dataSources:
           handler: handleNewGeyser
   - kind: ethereum/contract
     name: VaultFactory
-    network: mainnet
+    network: {{ network }}
     source:
-      address: '0x0000000000000000000000000000000000000000'
+      address: "{{ vaultFactory }}"
       abi: InstanceRegistry
+      startBlock: {{ startBlock }}
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -43,11 +45,34 @@ dataSources:
         - event: InstanceAdded(address)
           handler: handleNewVault
   - kind: ethereum/contract
-    name: CrucibleFactory
-    network: mainnet
+    name: UniversalVaultNFT
+    network: {{ network }}
     source:
-      address: '0x54e0395CFB4f39beF66DBCd5bD93Cca4E9273D56'
+      address: "{{ vaultFactory }}"
+      abi: ERC721
+      startBlock: {{ startBlock }}
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/vault.ts
+      entities:
+        - Vault
+      abis:
+        - name: ERC721
+          file: ./abis/IERC721Enumerable.json
+        - name: VaultContract
+          file: ./abis/IUniversalVault.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,indexed uint256)
+          handler: handleTransfer
+  - kind: ethereum/contract
+    name: CrucibleFactory
+    network: {{ network }}
+    source:
+      address: "{{ crucibleFactory }}"
       abi: InstanceRegistry
+      startBlock: {{ startBlock }}
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -65,10 +90,11 @@ dataSources:
           handler: handleNewVault
   - kind: ethereum/contract
     name: CrucibleNFT
-    network: mainnet
+    network: {{ network }}
     source:
-      address: '0x54e0395CFB4f39beF66DBCd5bD93Cca4E9273D56'
+      address: "{{ crucibleFactory }}"
       abi: ERC721
+      startBlock: {{ startBlock }}
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -84,31 +110,11 @@ dataSources:
       eventHandlers:
         - event: Transfer(indexed address,indexed address,indexed uint256)
           handler: handleTransfer
-  - kind: ethereum/contract
-    name: UniversalVaultNFT
-    network: mainnet
-    source:
-      address: '0x0000000000000000000000000000000000000000'
-      abi: ERC721
-    mapping:
-      kind: ethereum/events
-      apiVersion: 0.0.4
-      language: wasm/assemblyscript
-      file: ./src/vault.ts
-      entities:
-        - Vault
-      abis:
-        - name: ERC721
-          file: ./abis/IERC721Enumerable.json
-        - name: VaultContract
-          file: ./abis/IUniversalVault.json
-      eventHandlers:
-        - event: Transfer(indexed address,indexed address,indexed uint256)
-          handler: handleTransfer
+  
 templates:
   - kind: ethereum/contract
     name: GeyserTemplate
-    network: mainnet
+    network: {{ network }}
     source:
       abi: GeyserContract
     mapping:
@@ -138,7 +144,7 @@ templates:
           handler: handleRewardClaimed
   - kind: ethereum/contract
     name: PowerSwitchTemplate
-    network: mainnet
+    network: {{ network }}
     source:
       abi: PowerSwitchContract
     mapping:
@@ -160,7 +166,7 @@ templates:
           handler: handleEmergencyShutdown
   - kind: ethereum/contract
     name: VaultTemplate
-    network: mainnet
+    network: {{ network }}
     source:
       abi: VaultContract
     mapping:
