--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -6,9 +6,9 @@ dataSources:
     name: GeyserRegistry
     network: mainnet
     source:
-      address: '0xFc43803F203e3821213bE687120aD44C8a21A7e7'
-      startBlock: 12838258
+      address: "0xFc43803F203e3821213bE687120aD44C8a21A7e7"
       abi: InstanceRegistry
+      startBlock: 12797939
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -26,9 +26,9 @@ dataSources:
     name: VaultFactory
     network: mainnet
     source:
-      address: '0x8A09fFA4d4310c7F59DC538a1481D8Ba2214Cef0'
-      startBlock: 12838254
+      address: "0x8A09fFA4d4310c7F59DC538a1481D8Ba2214Cef0"
       abi: InstanceRegistry
+      startBlock: 12797939
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -45,12 +45,34 @@ dataSources:
         - event: InstanceAdded(address)
           handler: handleNewVault
   - kind: ethereum/contract
+    name: UniversalVaultNFT
+    network: mainnet
+    source:
+      address: "0x8A09fFA4d4310c7F59DC538a1481D8Ba2214Cef0"
+      abi: ERC721
+      startBlock: 12797939
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/vault.ts
+      entities:
+        - Vault
+      abis:
+        - name: ERC721
+          file: ./abis/IERC721Enumerable.json
+        - name: VaultContract
+          file: ./abis/IUniversalVault.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,indexed uint256)
+          handler: handleTransfer
+  - kind: ethereum/contract
     name: CrucibleFactory
     network: mainnet
     source:
-      address: '0x54e0395CFB4f39beF66DBCd5bD93Cca4E9273D56'
-      startBlock: 11881063
+      address: "0x54e0395CFB4f39beF66DBCd5bD93Cca4E9273D56"
       abi: InstanceRegistry
+      startBlock: 12797939
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -70,9 +92,9 @@ dataSources:
     name: CrucibleNFT
     network: mainnet
     source:
-      address: '0x54e0395CFB4f39beF66DBCd5bD93Cca4E9273D56'
-      startBlock: 11881063
+      address: "0x54e0395CFB4f39beF66DBCd5bD93Cca4E9273D56"
       abi: ERC721
+      startBlock: 12797939
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -88,28 +110,7 @@ dataSources:
       eventHandlers:
         - event: Transfer(indexed address,indexed address,indexed uint256)
           handler: handleTransfer
-  - kind: ethereum/contract
-    name: UniversalVaultNFT
-    network: mainnet
-    source:
-      address: '0x8A09fFA4d4310c7F59DC538a1481D8Ba2214Cef0'
-      startBlock: 12838254
-      abi: ERC721
-    mapping:
-      kind: ethereum/events
-      apiVersion: 0.0.4
-      language: wasm/assemblyscript
-      file: ./src/vault.ts
-      entities:
-        - Vault
-      abis:
-        - name: ERC721
-          file: ./abis/IERC721Enumerable.json
-        - name: VaultContract
-          file: ./abis/IUniversalVault.json
-      eventHandlers:
-        - event: Transfer(indexed address,indexed address,indexed uint256)
-          handler: handleTransfer
+  
 templates:
   - kind: ethereum/contract
     name: GeyserTemplate
