--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -4,11 +4,11 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: GeyserRegistry
-    network: mainnet
+    network: avalanche
     source:
-      address: "0xFc43803F203e3821213bE687120aD44C8a21A7e7"
+      address: "0x60156bB86e9125639c624712a360FD3AbBb52421"
       abi: InstanceRegistry
-      startBlock: 12797939
+      startBlock: 8279332
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -24,11 +24,11 @@ dataSources:
           handler: handleNewGeyser
   - kind: ethereum/contract
     name: VaultFactory
-    network: mainnet
+    network: avalanche
     source:
-      address: "0x8A09fFA4d4310c7F59DC538a1481D8Ba2214Cef0"
+      address: "0xceD5A1061F5507172059FE760CA2e9F050caBF02"
       abi: InstanceRegistry
-      startBlock: 12797939
+      startBlock: 8279332
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -46,11 +46,11 @@ dataSources:
           handler: handleNewVault
   - kind: ethereum/contract
     name: UniversalVaultNFT
-    network: mainnet
+    network: avalanche
     source:
-      address: "0x8A09fFA4d4310c7F59DC538a1481D8Ba2214Cef0"
+      address: "0xceD5A1061F5507172059FE760CA2e9F050caBF02"
       abi: ERC721
-      startBlock: 12797939
+      startBlock: 8279332
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -68,11 +68,11 @@ dataSources:
           handler: handleTransfer
   - kind: ethereum/contract
     name: CrucibleFactory
-    network: mainnet
+    network: avalanche
     source:
-      address: "0x54e0395CFB4f39beF66DBCd5bD93Cca4E9273D56"
+      address: "0x0000000000000000000000000000000000000000"
       abi: InstanceRegistry
-      startBlock: 12797939
+      startBlock: 8279332
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -90,11 +90,11 @@ dataSources:
           handler: handleNewVault
   - kind: ethereum/contract
     name: CrucibleNFT
-    network: mainnet
+    network: avalanche
     source:
-      address: "0x54e0395CFB4f39beF66DBCd5bD93Cca4E9273D56"
+      address: "0x0000000000000000000000000000000000000000"
       abi: ERC721
-      startBlock: 12797939
+      startBlock: 8279332
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -114,7 +114,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: GeyserTemplate
-    network: mainnet
+    network: avalanche
     source:
       abi: GeyserContract
     mapping:
@@ -144,7 +144,7 @@ templates:
           handler: handleRewardClaimed
   - kind: ethereum/contract
     name: PowerSwitchTemplate
-    network: mainnet
+    network: avalanche
     source:
       abi: PowerSwitchContract
     mapping:
@@ -166,7 +166,7 @@ templates:
           handler: handleEmergencyShutdown
   - kind: ethereum/contract
     name: VaultTemplate
-    network: mainnet
+    network: avalanche
     source:
       abi: VaultContract
     mapping:
