--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/node": "^14.14.6",
     "@uniswap/lib": "^4.0.1-alpha",
     "chai": "^4.2.0",
+    "dotenv": "^16.3.1",
     "ethereum-waffle": "^3.2.1",
     "ethers": "5.0.31",
     "hardhat": "^2.0.10",
