--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -4,11 +4,11 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: GeyserRegistry
-    network: avalanche
+    network: base-testnet
     source:
-      address: "0x60156bB86e9125639c624712a360FD3AbBb52421"
+      address: "0xC4AB03ee92f0e08211b55015b6aCA64CbaEbA382"
       abi: InstanceRegistry
-      startBlock: 8279332
+      startBlock: 8819122
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -24,11 +24,11 @@ dataSources:
           handler: handleNewGeyser
   - kind: ethereum/contract
     name: VaultFactory
-    network: avalanche
+    network: base-testnet
     source:
-      address: "0xceD5A1061F5507172059FE760CA2e9F050caBF02"
+      address: "0x9E1fbFEf5508eCB4A45632CE638A44a160E4979D"
       abi: InstanceRegistry
-      startBlock: 8279332
+      startBlock: 8819122
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -46,11 +46,11 @@ dataSources:
           handler: handleNewVault
   - kind: ethereum/contract
     name: UniversalVaultNFT
-    network: avalanche
+    network: base-testnet
     source:
-      address: "0xceD5A1061F5507172059FE760CA2e9F050caBF02"
+      address: "0x5C8884839B77383154E732021580F82F41998Fa6"
       abi: ERC721
-      startBlock: 8279332
+      startBlock: 8819122
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -68,11 +68,11 @@ dataSources:
           handler: handleTransfer
   - kind: ethereum/contract
     name: CrucibleFactory
-    network: avalanche
+    network: base-testnet
     source:
       address: "0x0000000000000000000000000000000000000000"
       abi: InstanceRegistry
-      startBlock: 8279332
+      startBlock: 8819122
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -90,11 +90,11 @@ dataSources:
           handler: handleNewVault
   - kind: ethereum/contract
     name: CrucibleNFT
-    network: avalanche
+    network: base-testnet
     source:
       address: "0x0000000000000000000000000000000000000000"
       abi: ERC721
-      startBlock: 8279332
+      startBlock: 8819122
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -114,7 +114,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: GeyserTemplate
-    network: avalanche
+    network: base-testnet
     source:
       abi: GeyserContract
     mapping:
@@ -144,7 +144,7 @@ templates:
           handler: handleRewardClaimed
   - kind: ethereum/contract
     name: PowerSwitchTemplate
-    network: avalanche
+    network: base-testnet
     source:
       abi: PowerSwitchContract
     mapping:
@@ -166,7 +166,7 @@ templates:
           handler: handleEmergencyShutdown
   - kind: ethereum/contract
     name: VaultTemplate
-    network: avalanche
+    network: base-testnet
     source:
       abi: VaultContract
     mapping:
