--- a/package.json
+++ b/package.json
@@ -46,5 +46,7 @@
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.9"
+  }
 }
