chore: Adds base and baseGoerli networks with verify params

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lint"
   ],
   "devDependencies": {
+    "@nomicfoundation/hardhat-verify": "^1.1.1",
     "@nomiclabs/hardhat-ethers": "^2.0.1",
     "@nomiclabs/hardhat-etherscan": "^2.1.8",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
