--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -5,17 +5,7 @@
     {
       "src": "favicon.svg",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "type": "image/svg"
     }
   ],
   "start_url": ".",
