--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -4,11 +4,11 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: GeyserRegistry
-    network: base-mainnet
+    network: base-testnet
     source:
-      address: "0xD5815fC3D736120d07a1fA92bA743c1167dA89d8"
+      address: "0xC4AB03ee92f0e08211b55015b6aCA64CbaEbA382"
       abi: InstanceRegistry
-      startBlock: 3618058
+      startBlock: 8819122
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -24,11 +24,11 @@ dataSources:
           handler: handleNewGeyser
   - kind: ethereum/contract
     name: VaultFactory
-    network: base-mainnet
+    network: base-testnet
     source:
-      address: "0x40292D35b48Ff625C648c2A7F0c9e42cd07cd0B0"
+      address: "0x9E1fbFEf5508eCB4A45632CE638A44a160E4979D"
       abi: InstanceRegistry
-      startBlock: 3618058
+      startBlock: 8819122
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -46,11 +46,11 @@ dataSources:
           handler: handleNewVault
   - kind: ethereum/contract
     name: UniversalVaultNFT
-    network: base-mainnet
+    network: base-testnet
     source:
-      address: "0x40292D35b48Ff625C648c2A7F0c9e42cd07cd0B0"
+      address: "0x9E1fbFEf5508eCB4A45632CE638A44a160E4979D"
       abi: ERC721
-      startBlock: 3618058
+      startBlock: 8819122
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -68,11 +68,11 @@ dataSources:
           handler: handleTransfer
   - kind: ethereum/contract
     name: CrucibleFactory
-    network: base-mainnet
+    network: base-testnet
     source:
       address: "0x0000000000000000000000000000000000000000"
       abi: InstanceRegistry
-      startBlock: 3618058
+      startBlock: 8819122
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -90,11 +90,11 @@ dataSources:
           handler: handleNewVault
   - kind: ethereum/contract
     name: CrucibleNFT
-    network: base-mainnet
+    network: base-testnet
     source:
       address: "0x0000000000000000000000000000000000000000"
       abi: ERC721
-      startBlock: 3618058
+      startBlock: 8819122
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -114,7 +114,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: GeyserTemplate
-    network: base-mainnet
+    network: base-testnet
     source:
       abi: GeyserContract
     mapping:
@@ -144,7 +144,7 @@ templates:
           handler: handleRewardClaimed
   - kind: ethereum/contract
     name: PowerSwitchTemplate
-    network: base-mainnet
+    network: base-testnet
     source:
       abi: PowerSwitchContract
     mapping:
@@ -166,7 +166,7 @@ templates:
           handler: handleEmergencyShutdown
   - kind: ethereum/contract
     name: VaultTemplate
-    network: base-mainnet
+    network: base-testnet
     source:
       abi: VaultContract
     mapping:
