--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -4,7 +4,7 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: GeyserRegistry
-    network: base-mainnet
+    network: base
     source:
       address: "0xD5815fC3D736120d07a1fA92bA743c1167dA89d8"
       abi: InstanceRegistry
@@ -24,7 +24,7 @@ dataSources:
           handler: handleNewGeyser
   - kind: ethereum/contract
     name: VaultFactory
-    network: base-mainnet
+    network: base
     source:
       address: "0x40292D35b48Ff625C648c2A7F0c9e42cd07cd0B0"
       abi: InstanceRegistry
@@ -46,7 +46,7 @@ dataSources:
           handler: handleNewVault
   - kind: ethereum/contract
     name: UniversalVaultNFT
-    network: base-mainnet
+    network: base
     source:
       address: "0x40292D35b48Ff625C648c2A7F0c9e42cd07cd0B0"
       abi: ERC721
@@ -68,7 +68,7 @@ dataSources:
           handler: handleTransfer
   - kind: ethereum/contract
     name: CrucibleFactory
-    network: base-mainnet
+    network: base
     source:
       address: "0x0000000000000000000000000000000000000000"
       abi: InstanceRegistry
@@ -90,7 +90,7 @@ dataSources:
           handler: handleNewVault
   - kind: ethereum/contract
     name: CrucibleNFT
-    network: base-mainnet
+    network: base
     source:
       address: "0x0000000000000000000000000000000000000000"
       abi: ERC721
@@ -114,7 +114,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: GeyserTemplate
-    network: base-mainnet
+    network: base
     source:
       abi: GeyserContract
     mapping:
@@ -144,7 +144,7 @@ templates:
           handler: handleRewardClaimed
   - kind: ethereum/contract
     name: PowerSwitchTemplate
-    network: base-mainnet
+    network: base
     source:
       abi: PowerSwitchContract
     mapping:
@@ -166,7 +166,7 @@ templates:
           handler: handleEmergencyShutdown
   - kind: ethereum/contract
     name: VaultTemplate
-    network: base-mainnet
+    network: base
     source:
       abi: VaultContract
     mapping:
