Change default RPC to match (#5)
Co-authored-by: ox katsu <oxkatsudon>

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,7 +37,7 @@
   },
   "scripts": {
     "start": "craco start --openssl-legacy-provider",
-    "build": "craco build --openssl-legacy-provider && [object Object] run sentry:sourcemaps",
+    "build": "craco build --openssl-legacy-provider",
     "test": "craco test",
     "eject": "react-scripts eject",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
